--- a/numpy/Arrays.ipynb
+++ b/numpy/Arrays.ipynb
@@ -189,11 +189,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "c09460f0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "9\n",
+      "(3, 3)\n",
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "print(arr)\n",
+    "\n",
+    "print(arr.size)\n",
+    "print(arr.shape)\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91356409",
+   "metadata": {},
+   "source": [
+    "Array Methods\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24d907f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "9\n",
+      "45\n",
+      "[12 15 18]\n",
+      "5.0\n",
+      "2.581988897471611\n",
+      "8\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "\n",
+    "print(arr.min())\n",
+    "print(arr.max())\n",
+    "print(arr.sum())\n",
+    "\n",
+    "sum=np.sum(arr , axis = 0) #0 for column and 1 for row wise summation\n",
+    "print(sum)\n",
+    "\n",
+    "print(arr.mean())\n",
+    "print(arr.std()) #Standard Deviation\n",
+    "\n",
+    "print(arr.argmax()) #Index of the max element\n",
+    "print(arr.argmin())"
+   ]
   }
  ],
  "metadata": {
