--- a/numpy/Arrays.ipynb
+++ b/numpy/Arrays.ipynb
@@ -260,6 +260,42 @@
     "print(arr.argmax()) #Index of the max element\n",
     "print(arr.argmin())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54844f44",
+   "metadata": {},
+   "source": [
+    "Reshaping and Resizing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "50988897",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24\n",
+      " 25 26 27 28 29 30]\n",
+      "[[ 1  2  3  4  5  6]\n",
+      " [ 7  8  9 10 11 12]\n",
+      " [13 14 15 16 17 18]\n",
+      " [19 20 21 22 23 24]\n",
+      " [25 26 27 28 29 30]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.arange(1,31)\n",
+    "print(arr)\n",
+    "print(arr.reshape(5,6))\n",
+    "\n",
+    "arr = arr.reshape(5,6) #RESIZING , UPDATING THE ARRAY"
+   ]
   }
  ],
  "metadata": {
