--- a/numpy/array_operations.ipynb
+++ b/numpy/array_operations.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f2960b65",
    "metadata": {},
    "outputs": [
@@ -299,6 +299,192 @@
    ],
    "source": [
     "A.T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7982a826",
+   "metadata": {},
+   "source": [
+    "Advanced Array Manipulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f73ea5a",
+   "metadata": {},
+   "source": [
+    "Stacking Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5907d995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a =  np.array([0,1,2,3,4])\n",
+    "b =  np.array([5,6,7,8,9])\n",
+    "\n",
+    "#In stacking , you are supposed to use only vectors/arrays not matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "731842af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4],\n",
+       "       [5, 6, 7, 8, 9]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack((a,b))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e6c64880",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack((a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fac1c409",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 5],\n",
+       "       [1, 6],\n",
+       "       [2, 7],\n",
+       "       [3, 8],\n",
+       "       [4, 9]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.column_stack((a,b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51d90a8d",
+   "metadata": {},
+   "source": [
+    "Splitting Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3176b477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.arange(1,26).reshape(5,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d5c49150",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[ 1],\n",
+       "        [ 6],\n",
+       "        [11],\n",
+       "        [16],\n",
+       "        [21]]),\n",
+       " array([[ 2],\n",
+       "        [ 7],\n",
+       "        [12],\n",
+       "        [17],\n",
+       "        [22]]),\n",
+       " array([[ 3],\n",
+       "        [ 8],\n",
+       "        [13],\n",
+       "        [18],\n",
+       "        [23]]),\n",
+       " array([[ 4],\n",
+       "        [ 9],\n",
+       "        [14],\n",
+       "        [19],\n",
+       "        [24]]),\n",
+       " array([[ 5],\n",
+       "        [10],\n",
+       "        [15],\n",
+       "        [20],\n",
+       "        [25]])]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hsplit(A,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1561edc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[1, 2, 3, 4, 5]]),\n",
+       " array([[ 6,  7,  8,  9, 10]]),\n",
+       " array([[11, 12, 13, 14, 15]]),\n",
+       " array([[16, 17, 18, 19, 20]]),\n",
+       " array([[21, 22, 23, 24, 25]])]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vsplit(A,5)"
    ]
   }
  ],
